docs: add heath check point
