# config/routes.rb
@@ -4,6 +4,9 @@ Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/api-docs'
   mount Rswag::Api::Engine => '/api-docs'
 
+  # health check
+  get '/health', to: 'health#health'
+
   resources :profiles, only: %i[create show index]
   resources :teches, only: %i[index show], path: 'techs'
   resources :abilities, only: %i[show index]
